src/scss/sections/_team.scss
.team {
  padding-top: 15rem;
}

.bold-text {
  font-weight: 600;
}

.team-description {
  margin-bottom: 12.5rem;
  position: relative;

  &:before {
    content: '';
    position: absolute;
    top: -0.8rem;
    left: -14rem;
    @include gradOrangePurple(to right);
    padding: 3rem 17rem;

  }

  &-top-main-title {
    position: relative;
    font-family: Releway, sans-serif;
    display: inline;
    font-size: 4rem;
    font-weight: 900;
    color: white;

  }

  &-title {
    width: 65rem;
    font-size: 3.5rem;
    font-weight: 900;
    font-family: Releway, sans-serif;
    line-height: 1.35;
    color: #07002c;
    margin: 4rem 0;
  }

  &-content {
    display: inline-block;
  }
}



.team-description-subtitle {
  font-family: Releway, sans-serif;
  line-height: 1.35;
  font-size: 2rem;
  width: 64rem;
  color: #07002c;
  margin-bottom: 3rem;
}

.team-description-bonus {
  font-family: Releway, sans-serif;
  line-height: 1.35;
  font-size: 2rem;
  color: black;
  width: 68rem;

  .team-description-bonus-highlight {
    @include gradBluViolet(to left);
    color: #fff;
    font-weight: 100;
    line-height: 1.35;
    padding: 0.3rem;
  }
}

.team-description-images {
  position: relative;
  top: 1rem;
  right: -2rem;
}

.team-description-photo-sharon,
.team-description-photo-olga {
  position: absolute;
  width: 31rem;
  //height: 20rem;
}

.team-description-photo-sharon {
  right: 35rem;
  bottom: 25rem;
}

.team-description-photo-eddie {
  position: absolute;
  height: 42rem;
  right: -5rem;
  bottom: 3rem;
}

.team-description-photo-olga {
  right: 34rem;
  bottom: -8rem;
}

.hexagon-1,
.hexagon-2 {
  display: block;
  position: absolute;
  opacity: 0.97;
  -webkit-clip-path: polygon(45% 1.33975%, 46.5798% 0.60307%, 48.26352% 0.15192%, 50% 0%, 51.73648% 0.15192%, 53.4202% 0.60307%, 55% 1.33975%, 89.64102% 21.33975%, 91.06889% 22.33956%, 92.30146% 23.57212%, 93.30127% 25%, 94.03794% 26.5798%, 94.48909% 28.26352%, 94.64102% 30%, 94.64102% 70%, 94.48909% 71.73648%, 94.03794% 73.4202%, 93.30127% 75%, 92.30146% 76.42788%, 91.06889% 77.66044%, 89.64102% 78.66025%, 55% 98.66025%, 53.4202% 99.39693%, 51.73648% 99.84808%, 50% 100%, 48.26352% 99.84808%, 46.5798% 99.39693%, 45% 98.66025%, 10.35898% 78.66025%, 8.93111% 77.66044%, 7.69854% 76.42788%, 6.69873% 75%, 5.96206% 73.4202%, 5.51091% 71.73648%, 5.35898% 70%, 5.35898% 30%, 5.51091% 28.26352%, 5.96206% 26.5798%, 6.69873% 25%, 7.69854% 23.57212%, 8.93111% 22.33956%, 10.35898% 21.33975%);
  clip-path: polygon(45% 1.33975%, 46.5798% 0.60307%, 48.26352% 0.15192%, 50% 0%, 51.73648% 0.15192%, 53.4202% 0.60307%, 55% 1.33975%, 89.64102% 21.33975%, 91.06889% 22.33956%, 92.30146% 23.57212%, 93.30127% 25%, 94.03794% 26.5798%, 94.48909% 28.26352%, 94.64102% 30%, 94.64102% 70%, 94.48909% 71.73648%, 94.03794% 73.4202%, 93.30127% 75%, 92.30146% 76.42788%, 91.06889% 77.66044%, 89.64102% 78.66025%, 55% 98.66025%, 53.4202% 99.39693%, 51.73648% 99.84808%, 50% 100%, 48.26352% 99.84808%, 46.5798% 99.39693%, 45% 98.66025%, 10.35898% 78.66025%, 8.93111% 77.66044%, 7.69854% 76.42788%, 6.69873% 75%, 5.96206% 73.4202%, 5.51091% 71.73648%, 5.35898% 70%, 5.35898% 30%, 5.51091% 28.26352%, 5.96206% 26.5798%, 6.69873% 25%, 7.69854% 23.57212%, 8.93111% 22.33956%, 10.35898% 21.33975%);
}

.hexagon-1 {
  width: 6rem;
  height: 6rem;
  bottom: 20rem;
  left: 78rem;
  @include gradBluViolet(to top right);
  transform: rotateZ(15deg);
}

.hexagon-2 {
  width: 9rem;
  height: 9rem;
  right: 23rem;
  top: 0;
  @include gradOrangePurple(to bottom);
  transform: rotateZ(33deg);
}


.services-title {
  font-family: Ralaway, sans-serif;
  display: flex;
  justify-content: center;
  flex-direction: column;
  color: black;
  align-items: center;
  font-size: 4rem;
  text-align: center;
  font-weight: 600;
}

.services-title-text {
  font-family: 'Raleway', sans-serif;
  display: flex;
  justify-content: center;
}

.services-title-line {
  display: flex;
  justify-content: center;
  width: 18rem;
  height: 0.5rem;
  margin-top: 1rem;
  @include gradBluViolet(to right);
}

.services-items-row-1,
.services-items-row-2 {
  display: flex;
  justify-content: center;
  text-align: center;
}

.services-item {
  width: 27rem;
  margin: 2rem;
}

.services-item-text {
  font-family: Releway, sans-serif;
  font-size: 2rem;
  color: black;
  line-height: 1.35;
}

.services-item-logo {
  width: 6rem;
  height: 6rem;
}

